Improved the alignment of the td in the table by removing fixed width.

--- a/BlazorCalendar/wwwroot/css/main.css
+++ b/BlazorCalendar/wwwroot/css/main.css
@@ -62,8 +62,7 @@ header {
 }
 
 .calendar-table .day{
-    width: 125px;
-    height: 110px;
+    height: 115px;
     min-width: 125px;
     margin: 2px;
     border-radius: 5px;
@@ -91,6 +90,7 @@ header {
     font-size: 10px;
     padding: 2px;
     border-radius: 5px;
+    margin-top: 2px;
 }
 
 @media (max-width: 900px){
